# multistream-obs

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  buildspec.json
cmake/common/: buildspec_common.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini
data/shaders/: scaling.effect
src/: multistream-output.cpp  multistream-output.h  plugin-main.cpp  settings-ui.cpp  settings-ui.h  stream-config.h  stream-target.cpp  stream-target.h  video-scaler.cpp  video-scaler.h
src/util/: hw-capability.cpp  hw-capability.h  logger.cpp  logger.h
